[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nightline"
version = "1.0.0"
description = "AI-Powered Lead Generation - Find businesses that claim 24/7 service but don't answer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nightline Team"}
]
keywords = ["leads", "hvac", "automation", "twilio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "twilio>=8.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "apscheduler>=3.10.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
nightline = "nightline.cli:main"

[project.urls]
Homepage = "https://github.com/nightline/nightline"
Documentation = "https://github.com/nightline/nightline#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["nightline*"]

